<resources>
    <string name="app_name">MyClass</string>
    <string name="no">Nomor</string>
    <string name="nama">Nama</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="informasi">Aplikasi ini berisi daftar Kru Bajak Laut topi jerami. Digunakan untuk pendataan kru.
        Fitur yang dimiliki dapat menambah, update, dan hapus data kru topi jerami</string>
    <string name="owner">Created By : Winar Wahyuw</string>
    <string name="version">Version : 1.1</string>
    <string name="email">Email : winarwahyuw99@gmail.com</string>
</resources>
